-Renamed business model to businessInfo -Added parameter validation LicenseRequestValidator.ts -Added invalid params exceptions
