# src/api/routes/routes.ts
@@ -26,7 +26,7 @@ const models: TsoaRoute.Models = {
         "additionalProperties": true,
     },
     // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-    "BusinessModel": {
+    "BusinessInfoModel": {
         "dataType": "refObject",
         "properties": {
             "name": { "dataType": "string", "required": true },
