# src/domain/handlers/GetInfoByNeqHandler.ts
@@ -1,12 +1,12 @@
 import { Handler, ICommandHandler } from "tsmediator";
 import { Container } from "typedi";
-import { BusinessModel } from "../../api/models/business";
+import { BusinessInfoModel } from "../../api/models/businessInfo";
 import { IWebCrawler } from "../../interfaces/services/IWebCrawler";
 import { RbqWebCrawler } from "../../services/RbqWebCrawler";
 
 @Handler(GetInfoByNeqHandler.Type)
-export class GetInfoByNeqHandler implements ICommandHandler<number, Promise<BusinessModel>> {
-    private crawler: IWebCrawler<BusinessModel>;
+export class GetInfoByNeqHandler implements ICommandHandler<number, Promise<BusinessInfoModel>> {
+    private crawler: IWebCrawler<BusinessInfoModel>;
 
     constructor() {
         this.crawler = Container.get<RbqWebCrawler>("rbq.webCrawler");
@@ -16,7 +16,7 @@ export class GetInfoByNeqHandler implements ICommandHandler<number, Promise<Busi
         return "GetInfoByNeq";
     }
 
-    public async Handle(neqId: number): Promise<BusinessModel> {
+    public async Handle(neqId: number): Promise<BusinessInfoModel> {
         // Run the crawler to scrape info needed.
         await this.crawler.run(neqId);
 
