# src/domain/handlers/GetInfoByRbqHandler.ts
@@ -1,12 +1,12 @@
 import { Handler, ICommandHandler } from "tsmediator";
 import { Container } from "typedi";
-import { BusinessModel } from "../../api/models/business";
+import { BusinessInfoModel } from "../../api/models/businessInfo";
 import { IWebCrawler } from "../../interfaces/services/IWebCrawler";
 import { RbqWebCrawler } from "../../services/RbqWebCrawler";
 
 @Handler(GetInfoByRbqHandler.Type)
-export class GetInfoByRbqHandler implements ICommandHandler<string, Promise<BusinessModel>> {
-    private crawler: IWebCrawler<BusinessModel>;
+export class GetInfoByRbqHandler implements ICommandHandler<string, Promise<BusinessInfoModel>> {
+    private crawler: IWebCrawler<BusinessInfoModel>;
 
     constructor() {
         this.crawler = Container.get<RbqWebCrawler>("rbq.webCrawler");
@@ -16,7 +16,7 @@ export class GetInfoByRbqHandler implements ICommandHandler<string, Promise<Busi
         return "GetInfoByRbq";
     }
 
-    public async Handle(rbqNum: string): Promise<BusinessModel> {
+    public async Handle(rbqNum: string): Promise<BusinessInfoModel> {
         // Run the crawler to scrape info needed.
         await this.crawler.run(rbqNum);
 
